# WEB_HW_13.2

./: pyproject.toml
hw_10/hw_10/: settings.py
hw_10/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
hw_10/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw_10/quotes/templates/quotes/: add_author.html  add_quote.html  author_info.html  base.html  found_by_tag.html  index.html
hw_10/quotes/templatetags/: extract.py
hw_10/users/: forms.py  urls.py  views.py
hw_10/users/templates/users/: base.html  login.html  signup.html
hw_10/utils/: add_quotes_to_mongo.py  migration.py
