[tool.poetry]
name = "web-hw-13-2"
version = "0.1.0"
description = ""
authors = ["Mariia Bulavina <120931054+MariiaBulavina@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_hw_13"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
